src-tauri/src/recommendation/snapshots/champ_select_assistant_lib__recommendation__snapshot_tests__snapshot_tests__pick_watching.snap
---
source: src/recommendation/snapshot_tests.rs
expression: snap
---
[
  {
    "rank": 1,
    "champion_key": "Thresh",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 2,
    "champion_key": "Blitzcrank",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 3,
    "champion_key": "Ekko",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 4,
    "champion_key": "Nautilus",
    "tier": "C",
    "confidence": "low"
  },
  {
    "rank": 5,
    "champion_key": "Ahri",
    "tier": "C",
    "confidence": "low"
  }
]
